src/tests/snapshots/molt__tests__syntax_error3.snap
---
source: src/tests/mod.rs
expression: "emit_diagnostic_str(& input, make_error_diagnostic(& err))"
snapshot_kind: text
---
error: expected one of: `match`, `mod`, `type`, `let`, `strict`, `ignore`
  ┌─ "test_data/molt_grammar/syntax_error3.molt":1:19
  │
1 │ let x: Type = Foo;;
  │                   ^ expected one of: `match`, `mod`, `type`, `let`, `strict`, `ignore`
